fix for code sprint issues 43 ad 44, the charset problem in attributes tables
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31062 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -1,168 +1,285 @@
-UDIGApplication_error_jai_warning_title=Warning
-UDIGApplication_error_jai_warning_text=Warning: Java Advanced Imaging(JAI) is not installed.  Map viewing and \
-									   printing cannot be performed until it has been installed.  Only non-display \
-	                          		   actions can be performed.  \n\nFor debugging information go to the Help/About menu.  It has all the \
-	                        		   configuration information that uDig is using.\n\nIt is recommended that uDig be closed and restarted when JAI has \
-	                        		   been installed.
-UDIGWorkbenchAdvisor_file=&File
-UDIGWorkbenchAdvisor_new=&New
-UDIGWorkbenchAdvisor_edit=&Edit
-UDIGWorkbenchAdvisor_tools=&Tools
-UDIGWorkbenchAdvisor_window=&Window
-UDIGWorkbenchAdvisor_show_view=Show &View
-UDIGWorkbenchAdvisor_layerMenu=&Layer
-UDIGWorkbenchAdvisor_help=&Help
-UDIGWorkbenchAdvisor_open_perspective=Open &Perspective
-UDIGWorkbenchAdvisor_resetPerspective_text=&Reset Perspective
-UDIGWorkbenchAdvisor_preferences_text=&Preferences
-UDIGWorkbenchAdvisor_helpContents_text=&Help Contents
-UDIGWorkbenchAdvisor_navigationMenu=&Navigation
-UDIGWorkbenchAdvisor_newWindow_text=&New Window
-UDIGWorkbenchAdvisor_aboutUDig_text=&About {0}
-UDIGWorkbenchAdvisor_closePerspective_text=&Close Perspective
-UDIGWorkbenchWindowAdvisor_classNotFound=Unable to load class {0} for use as {1}.
-UDIGWorkbenchAdvisor_closeAllPerspectives_text=C&lose All Perspectives
-UDIGWorkbenchWindowAdvisor_specifiedButNotFound={1} "{0}" specified but no valid extension found.\nPlease check that the extension exists and that it is valid.
-UDIGWorkbenchAdvisor_welcome_text=&Welcome
-AuthenticationDialog_label_prompt=Please enter a username and password.
-AuthenticationDialog_label_username=Username:
-AuthenticationDialog_label_password=Password:
-AuthenticationDialog_label_rememberPassword=Remember this password.
-AuthenticationDialog_dialog_title=Password Required
-OperationMenuFactory_menu_text=&Operations
-OperationLabelProvider_unknown=Unknown
-OperationDialog_Title=Operations
-OperationDialog_Message=What would you like to do:
-OperationDialog_PleaseSelect=Please select an operation:
-OperationDialog_Operate=Operate
 
+AttributeValidator_missingAtt1 = Attribute 
 
+AttributeValidator_missingAtt2 = \ must have a value.
+
+AttributeValidator_restriction = There is a restriction for this type that declares that:
+
+AttributeValidator_wrongType = The value must be a 
+
+AuthenticationDialog_dialog_title = Password Required
+
+AuthenticationDialog_label_password = Password:
+
+AuthenticationDialog_label_prompt = Please enter a username and password.
+
+AuthenticationDialog_label_rememberPassword = Remember this password.
+
+AuthenticationDialog_label_username = Username:
+
+BooleanCellEditor_FALSE = false
+
+BooleanCellEditor_TRUE = true
+
+CRSChooserDialog_title = Select Coordinate Reference System
+
+CRSChooser_keywordsLabel = Keywords:
+
+CRSChooser_label_crs = Coordinate Reference Systems:
+
+CRSChooser_label_crsWKT = Coordinate Reference System WKT:
+
+CRSChooser_tab_customCRS = Custom CRS
+
+CRSChooser_tab_standardCRS = Standard CRS
+
+CRSChooser_tooltip = Comma separated keywords for searching
+
+CRSChooser_unknownWKT = Unknown/Illegal WKT
+
+CRSChooser_unnamed = UNNAMED
+
+CharSetFieldEditor_select = Select
+
+CharsetSelectionDialog_title = Select Character Set
+
+ErrorManager_very_informative_error = Error
+
+ExceptionDisplayer_very_informative_error = Error
+
+FeatureTableContentProvider_loadedFeatures = Loaded = 
+
+FeatureTableContentProvider_loading = Loading Features....
+
+FeatureTableContentProvider_outOfMemory = features were loaded, but there were too many features to fit in memory.  Try increasing the amount of memory in the application.
+
+FeatureTableContentProvider_probablecharseterror = It is possible that the attribute table contains characters that are not compatible with the current charset. Please try to change the charset of the resource.
+
+FeatureTableContentProvider_sortTable = Sorting Features in Table...
+
+FeatureTableContentProvider_unexpectedErro = An unexpected error occurred while loading features into table: 
+
+FeatureTableContentProvider_updateTaskName = Updating Feature Table:
+
+FeatureTableContentProvider_updatingFeatures = \ features updated
+
+FeatureTableControl_1 = No Features to display
+
+FeatureTableControl_loading1 = Loading 
+
+FeatureTableControl_loading2 = \ into Feature Table: 
+
+FeatureTableControl_loadingMessage = Loading...
+
+FeatureTableControl_noEditor1 = The 
+
+FeatureTableControl_noEditor2 = \ type does not yet have a editor, please make a feature request.
+
+FeatureTableControl_warningMessage = Warning:  All the features in the selected layer will be loaded into memory (excepting geometries). This could cause slow downs and occasional strange behaviour if data is very large.  \n\nIf this is causing problems simply close the table view or press the stop button.
+
+FeatureTableControl_warningTitle = Warning
+
+FeatureTableControl_warningToggle = Do not show warning in the future
+
+FeatureTableSelectionProvider_loading_new_selection = Loading new selection
+
+FeatureTextTransfer_strategy_gml_name = GML
+
+FeatureTextTransfer_strategy_wkt_name = JTS WKT
+
+FeatureTextTransfer_transfer_name = Feature
+
+FeatureTypeEditorDialog_ShellTitle = Create New Layer
+
+FeatureTypeEditor_booleanType = Boolean
+
+FeatureTypeEditor_dateType = Date
+
+FeatureTypeEditor_defaultGeometryName = geometry
+
+FeatureTypeEditor_defaultNameAttributeName = name
+
+FeatureTypeEditor_doubleType = Double
+
+FeatureTypeEditor_floatType = Float
+
+FeatureTypeEditor_geometryType = Geometry
+
+FeatureTypeEditor_integerType = Integer
+
+FeatureTypeEditor_lineStringType = LineString
+
+FeatureTypeEditor_longType = Long
+
+FeatureTypeEditor_multiLineStringType = MultiLineString
+
+FeatureTypeEditor_multiPointType = MultiPoint
+
+FeatureTypeEditor_multiPolygonType = MultiPolygon
+
+FeatureTypeEditor_nameColumnName = Name
+
+FeatureTypeEditor_newAttributeTypeDefaultName = New_Attribute
+
+FeatureTypeEditor_newFeatureTypeName = New_Feature_Type
+
+FeatureTypeEditor_pointType = Point
+
+FeatureTypeEditor_polygonType = Polygon
+
+FeatureTypeEditor_stringType = String
+
+FeatureTypeEditor_typeColumnName = Type
+
+FileExportOperation_allFiles = All Files
+
+FileExportOperation_defaultName = new
+
+FileExportOperation_finishStatus = Finished export to 
+
+FileExportOperation_prompt = Export to
+
+FileExportOperation_writingStatus = Writing to 
+
+NewFeatureTypeOp_duplicateTypeName = Type Name is already used, choose another
+
+OpAction_errorMessage = Unable to run operation, check configuration or contact plugin author.
+
+OpAction_errorTitle = Operation Error
+
+OperationDialog_Message = What would you like to do:
+
+OperationDialog_Operate = Operate
+
+OperationDialog_PleaseSelect = Please select an operation:
+
+OperationDialog_Title = Operations
+
+OperationLabelProvider_unknown = Unknown
+
+OperationMenuFactory_menu_text = &Operations
+
+PlatformGIS_background = Run In Background
+
+RunOperationDialog_run_operation = Run Operation
+
+SendLogDialog_contact = Contact:
+
+SendLogDialog_contact_message = Please provide your contact information.
+
+SendLogDialog_description = Submit your log file to the uDig development team.
+
+SendLogDialog_empty = EMPTY
+
+SendLogDialog_log = Log file content:
+
+SendLogDialog_notes = Notes:
+
+SendLogDialog_notes_message = Please enter a clear description of the problem including instructions on how to reproduce it.
+
+SendLogDialog_reading = Reading log file...
+
+SendLogDialog_submit = Submit
+
+SendLogDialog_title = Send Log
+
+ShutdownTaskList_shutDown = Shutting Down
+
+TipDialog_question = Show me tips every time I startup
+
+TipDialog_shellText = Tip of the Day
+
+TransferPreference_transfer_preference_description = Preferences for copy and pasting data
+
+UDIGApplication_error = Error during Application run
+
+UDIGApplication_error1 = It appears that the GDI+ library is not install on your computer.  It can be freely downloaded 
+
+UDIGApplication_error2 = from the Microsoft website: \n
+
+UDIGApplication_error_jai_warning_text = Warning: Java Advanced Imaging(JAI) is not installed.  Map viewing and printing cannot be performed until it has been installed.  Only non-display actions can be performed.  \n\nFor debugging information go to the Help/About menu.  It has all the configuration information that uDig is using.\n\nIt is recommended that uDig be closed and restarted when JAI has been installed.
+
+UDIGApplication_error_jai_warning_title = Warning
+
+UDIGApplication_title = Missing Dependency
+
+UDIGDropHandler_error = An error has occurred while performing the requested action.
+
+UDIGDropHandler_jobName = Processing Drop Event
+
+UDIGDropHandler_performing_task = Performing Task
+
+UDIGWorkbenchAdvisor_aboutUDig_text = &About {0}
+
+UDIGWorkbenchAdvisor_closeAllPerspectives_text = C&lose All Perspectives
+
+UDIGWorkbenchAdvisor_closePerspective_text = &Close Perspective
+
+UDIGWorkbenchAdvisor_edit = &Edit
+
+UDIGWorkbenchAdvisor_file = &File
+
+UDIGWorkbenchAdvisor_help = &Help
+
+UDIGWorkbenchAdvisor_helpContents_text = &Help Contents
+
+UDIGWorkbenchAdvisor_layerMenu = &Layer
+
+UDIGWorkbenchAdvisor_navigationMenu = &Navigation
+
+UDIGWorkbenchAdvisor_new = &New
+
+UDIGWorkbenchAdvisor_newWindow_text = &New Window
+
+UDIGWorkbenchAdvisor_open_perspective = Open &Perspective
+
+UDIGWorkbenchAdvisor_preferences_text = &Preferences
+
+UDIGWorkbenchAdvisor_resetPerspective_text = &Reset Perspective
+
+UDIGWorkbenchAdvisor_show_view = Show &View
+
+UDIGWorkbenchAdvisor_tools = &Tools
+
+UDIGWorkbenchAdvisor_welcome_text = &Welcome
+
+UDIGWorkbenchAdvisor_window = &Window
+
+UDIGWorkbenchWindowAdvisor_classNotFound = Unable to load class {0} for use as {1}.
+
+UDIGWorkbenchWindowAdvisor_specifiedButNotFound = {1} "{0}" specified but no valid extension found.\nPlease check that the extension exists and that it is valid.
+
+UiPreferences_advancedGraphics_label = Advanced Graphics (disable if no map is displayed)
+
+UiPreferences_charset = Default Character Set
+
+UiPreferences_description = Preferences that control aspects of the UI
+
+cancel_image = stop_co.gif
 
 #
 # Search Part Fun
 #
-cancel_label=Cancel
-cancel_image=stop_co.gif
-cancel_description=
-cancel_tooltip=
+cancel_label = Cancel
 
-orientation_horizontal_label=Horizontal View Orientation
-orientation_horizontal_image=split_horizontal_mode.gif
-orientation_horizontal_description=
-orientation_horizontal_tooltip=
+deleteAttributeAction_description = Delete Attribute from Feature Type
 
-orientation_vertical_label=Vertical View Orientation
-orientation_vertical_image=split_vertical_mode.gif
-orientation_vertical_description=
-orientation_vertical_tooltip=
+deleteAttributeAction_label = Delete Attribute
 
-orientation_single_label=Single
-orientation_single_image=split_single_mode.gif
-orientation_single_description=
-orientation_single_tooltip=
+deleteAttributeAction_tooltip = Delete Attribute
 
-orientation_automatic_label=Automatic View Orientation
-orientation_automatic_image=split_automatic_mode.gif
-orientation_automatic_description=
-orientation_automatic_tooltip=
+orientation_automatic_image = split_automatic_mode.gif
 
-UDIGDropHandler_error=An error has occurred while performing the requested action.
-UDIGDropHandler_jobName=Processing Drop Event
-UDIGDropHandler_performing_task=Performing Task
-UDIGApplication_error=Error during Application run
-UDIGApplication_title=Missing Dependency
-UDIGApplication_error1=It appears that the GDI+ library is not install on your computer.  It can be freely downloaded 
-UDIGApplication_error2=from the Microsoft website: \n
-FeatureTypeEditor_stringType=String
-FeatureTypeEditor_dateType=Date
-FeatureTypeEditor_integerType=Integer
-FeatureTypeEditor_longType=Long
-FeatureTypeEditor_doubleType=Double
-FeatureTypeEditor_floatType=Float
-FeatureTypeEditor_pointType=Point
-FeatureTypeEditor_lineStringType=LineString
-FeatureTypeEditor_polygonType=Polygon
-FeatureTypeEditor_booleanType=Boolean
-FeatureTypeEditor_geometryType=Geometry
-FeatureTypeEditor_multiPointType=MultiPoint
-FeatureTypeEditor_multiLineStringType=MultiLineString
-FeatureTypeEditor_defaultGeometryName=geometry
-FeatureTypeEditor_defaultNameAttributeName=name
-FeatureTypeEditor_multiPolygonType=MultiPolygon
-FeatureTypeEditorDialog_ShellTitle=Create New Layer
-FeatureTableControl_loadingMessage=Loading...
-FeatureTableControl_warningTitle=Warning
-FeatureTableControl_warningMessage=Warning:  All the features in the selected layer will be loaded into memory (excepting geometries). \
-This could cause slow downs and occasional strange behaviour if data is very large.  \n\nIf this is causing problems \
-simply close the table view or press the stop button.
-FeatureTableContentProvider_outOfMemory= features were loaded, but there were too many features to fit in memory.  Try increasing the amount of memory in the application.
-FeatureTableContentProvider_unexpectedErro=An unexpected error occurred while loading features into table: 
-FeatureTableContentProvider_updatingFeatures=\ features updated
-FeatureTableContentProvider_updateTaskName=Updating Feature Table:
-FeatureTableContentProvider_loadedFeatures=Loaded = 
-FeatureTableSelectionProvider_loading_new_selection=Loading new selection
-FeatureTableContentProvider_loading=Loading Features....
-FeatureTableContentProvider_sortTable=Sorting Features in Table...
-FeatureTableControl_warningToggle=Do not show warning in the future
-FeatureTableControl_noEditor1=The 
-FeatureTableControl_noEditor2=\ type does not yet have a editor, please make a feature request.
-FeatureTableControl_loading1=Loading 
-FeatureTableControl_loading2=\ into Feature Table: 
-FeatureTableControl_1=No Features to display
-FeatureTypeEditor_nameColumnName=Name
-FeatureTypeEditor_typeColumnName=Type
-FeatureTypeEditor_newFeatureTypeName=New_Feature_Type
-FeatureTypeEditor_newAttributeTypeDefaultName=New_Attribute
-deleteAttributeAction_tooltip=Delete Attribute
-deleteAttributeAction_label=Delete Attribute
-deleteAttributeAction_description=Delete Attribute from Feature Type
+orientation_automatic_label = Automatic View Orientation
 
-NewFeatureTypeOp_duplicateTypeName=Type Name is already used, choose another
-TipDialog_shellText=Tip of the Day
-TipDialog_question=Show me tips every time I startup
-FeatureTextTransfer_strategy_gml_name=GML
-FeatureTextTransfer_strategy_wkt_name=JTS WKT
-FeatureTextTransfer_transfer_name=Feature
-TransferPreference_transfer_preference_description=Preferences for copy and pasting data
-SendLogDialog_title=Send Log
-SendLogDialog_description=Submit your log file to the uDig development team.
-SendLogDialog_contact=Contact:
-SendLogDialog_notes=Notes:
-SendLogDialog_log=Log file content:
-SendLogDialog_reading=Reading log file...
-SendLogDialog_submit=Submit
-SendLogDialog_contact_message=Please provide your contact information.
-SendLogDialog_notes_message=Please enter a clear description of the problem including instructions on how to reproduce it.
-SendLogDialog_empty=EMPTY
-ShutdownTaskList_shutDown=Shutting Down
-PlatformGIS_background=Run In Background
-BooleanCellEditor_FALSE=false
-BooleanCellEditor_TRUE=true
-AttributeValidator_missingAtt1=Attribute 
-AttributeValidator_missingAtt2=\ must have a value.
-AttributeValidator_restriction=There is a restriction for this type that declares that:
-AttributeValidator_wrongType=The value must be a 
-FileExportOperation_prompt=Export to
-FileExportOperation_defaultName=new
-FileExportOperation_allFiles=All Files
-FileExportOperation_writingStatus=Writing to 
-FileExportOperation_finishStatus=Finished export to 
-UiPreferences_description=Preferences that control aspects of the UI
-UiPreferences_charset=Default Character Set
-UiPreferences_advancedGraphics_label=Advanced Graphics (disable if no map is displayed)
-CRSChooser_label_crsWKT=Coordinate Reference System WKT:
-CRSChooser_label_crs=Coordinate Reference Systems:
-CRSChooser_tab_standardCRS=Standard CRS
-CRSChooser_tab_customCRS=Custom CRS
-CRSChooser_keywordsLabel=Keywords:
-CRSChooser_unnamed=UNNAMED
-CRSChooser_unknownWKT=Unknown/Illegal WKT
-CRSChooserDialog_title=Select Coordinate Reference System
-CRSChooser_tooltip=Comma separated keywords for searching
-RunOperationDialog_run_operation=Run Operation
-ExceptionDisplayer_very_informative_error=Error
-ErrorManager_very_informative_error=Error
-OpAction_errorTitle=Operation Error
-OpAction_errorMessage=Unable to run operation, check configuration or contact plugin author.
-CharsetSelectionDialog_title=Select Character Set
-CharSetFieldEditor_select=Select
+orientation_horizontal_image = split_horizontal_mode.gif
+
+orientation_horizontal_label = Horizontal View Orientation
+
+orientation_single_image = split_single_mode.gif
+
+orientation_single_label = Single
+
+orientation_vertical_image = split_vertical_mode.gif
+
+orientation_vertical_label = Vertical View Orientation
