--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_de.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_de.properties
@@ -48,6 +48,8 @@ FeatureTableContentProvider_loading = Lade Features ...
 
 FeatureTableContentProvider_outOfMemory = Features wurden geladen, aber nicht alle Features hatten im Speicher Platz. Geben Sie der Anwendung mehr Hauptspeicher.
 
+FeatureTableContentProvider_probablecharseterror = Es ist 
+
 FeatureTableContentProvider_sortTable = Sortiere Elemente in Tabelle ...
 
 FeatureTableContentProvider_unexpectedErro = Beim Laden der Features trat ein unerwarteter Fehler auf:
