--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
@@ -54,6 +54,8 @@ FeatureTableContentProvider_loading = Caricamento delle features...
 
 FeatureTableContentProvider_outOfMemory = le feature sono state caricate ma ci sono troppe feature per la memoria disponibile. Provare ad aumentare la memoria disponibile per l''applicazione.
 
+FeatureTableContentProvider_probablecharseterror = \u00E8 possibile che la tabella degli attributi contenga caratteri non compatibili con il set di caratteri attualmente impostati. Si consideri di cambiare il set di caratteri della risorsa.
+
 FeatureTableContentProvider_sortTable = Ordina le feature nella tabella...
 
 FeatureTableContentProvider_unexpectedErro = Si \u00E8 verificato un errore durante il caricamento delle features nella tabella:
