small corrections on Italian messages
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31064 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin_it.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin_it.properties
@@ -11,6 +11,7 @@ FilterDropAction.name = Filter Drop
 
 Layer.Category           = Piano
 Layer.Modify.Category    = Modifica il piano
+Layer.Name               = &Piano
 
 LayerActions.label = Azioni sui piani
 LayerActions.name  = Azioni sui piani
@@ -226,6 +227,5 @@ zoom.tools.name              = Strumenti di &Zoom
 zoomToLayer.label   = Zoom al piano
 zoomToLayer.tooltip = Zoom al piano selezionato
 
-zoomToMultipleLayers.label   = Zomm ai Piani
-zoomToMultipleLayers.tooltip = Zomm ai Piani
-Layer.Name = &Piano
+zoomToMultipleLayers.label   = Zoom ai Piani
+zoomToMultipleLayers.tooltip = Zoom ai Piani
