--- a/plugins/net.refractions.udig.catalog.ui/src/net/refractions/udig/catalog/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.catalog.ui/src/net/refractions/udig/catalog/ui/internal/messages.properties
@@ -139,6 +139,7 @@ DependencyQueryPreferencePage_restartQuestion = \nDo you wish to restart now?
 DependencyQueryPreferencePage_restartTitle = Restart Application
 
 FileConnectionPage_taskname = Importing Layer
+FileConnectionPage_waitMessage=Please wait; loading the following resources
 
 LayerSelectionPage_message = Select one or more resources to export to shapefile.\nClick on the Projection to change destination Projection.
 
