added --help and --version support
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31163 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -201,6 +201,8 @@ UDIGApplication_error_jai_warning_text = Warning: Java Advanced Imaging(JAI) is 
 
 UDIGApplication_error_jai_warning_title = Warning
 
+UDIGApplication_helpstring = NAME\r\n\u0009udig\r\n\r\nSYNOPSIS\r\n\u0009 {0} [OPTIONS] [-vmargs [VM_OPTIONS]]\r\n\r\nDESCRIPTION\r\n\u0009uDig is an open source (LGPL) desktop application framework, built with Eclipse Rich Client (RCP) technology.\r\n\r\nOPTIONS\r\n\u0009--help, -h\r\n\u0009\u0009Print this help and exit.\r\n\r\n\u0009--version, -v\r\n\u0009\u0009Print version number and exit.\r\n\r\n\u0009-data <workspacePath>\r\n\u0009\u0009Sets the path of the workspace on which to run udig.\r\n\r\n\u0009-nl locale\r\n\u0009\u0009Defines the name of the locale on which uDig is running (ex. -nl IT will force uDig to run with Italian user interface).\r\n\r\n\u0009-clean\r\n\u0009\u0009Cleans cached data used by the OSGi framework and Eclipse runtime. \r\n\u0009\u0009Try to run Eclipse once with this option if you observe startup errors after \r\n\u0009\u0009install, update, or using a shared configuration.\r\n\r\n\u0009-consoleLog -debug\r\n\u0009\u0009Mirrors all errors to standard output. Usefull to find odd behaviours and report them to developers.\r\n\r\n\u0009-vm <vmPath>\r\n\u0009\u0009The location of Java Runtime Environment (JRE) to use to run uDig.\r\n\r\nVM_OPTIONS\r\n\u0009-Xmx<memory size>\r\n\u0009\u0009Set maximum Java heap size (ex. -Xmx1200m sets it to 1200 megabytes).\r\n
+
 UDIGApplication_title = Missing Dependency
 
 UDIGDropHandler_error = An error has occurred while performing the requested action.
