--- a/plugins/net.refractions.udig.mapgraphic/src/net/refractions/udig/mapgraphic/internal/messages.properties
+++ b/plugins/net.refractions.udig.mapgraphic/src/net/refractions/udig/mapgraphic/internal/messages.properties
@@ -1,14 +1,14 @@
-MapGraphic_title=Map Graphic
-MapGraphicService_title=Map Graphics
-MapGraphicService_description=All the available map graphics in the system
-MapGraphicResource_description={0} Map Graphic
-OtherAction_shellText=Add Graphic to Map
-OtherAction_wizardTitle=Select Graphics to add to map
+MapGraphic_title=Decoration
+MapGraphicService_title=Decoration
+MapGraphicService_description=All the available decorations
+MapGraphicResource_description={0} Decoration
+OtherAction_shellText=Add Decoration to Map
+OtherAction_wizardTitle=Select Decoration to add to map
 OtherAction_addButton=Add
-OtherAction_message1=Select Map Graphic to add to map
+OtherAction_message1=Select Decoration to add to map
 OtherAction_p1=Press 'Add' to add 
-OtherAction_p2=MapGraphics to map
-OtherAction_addAll=Press 'Add' to add selected MapGraphics to map
+OtherAction_p2= Decoration to map
+OtherAction_addAll=Press 'Add' to add selected Decoration to map
 ScalebarStyleConfigurator_top=Top
 ScalebarStyleConfigurator_middle=Middle
 ScalebarStyleConfigurator_bottom=Bottom
