--- a/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
@@ -205,6 +205,7 @@ PaletteDefaultChooserPanel_title=Map Colour Defaults
 PaletteDefaultChooserPanel_palette=Palette:
 PaletteDefaultChooserPanel_colours=Number of available colours:
 PaletteDefaultChooserPanel_check=\nCheck the layers that you want to apply this new Colour Scheme to:
+PaletteDefaultChooserPanel_MapBackgroundColor=Map Background Color:
 DropFilterAction_taskname=Set Selection
 AbstractDrawCommand_name=Draw
 
