http://jira.codehaus.org/browse/UDIG-434
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31170 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.mapgraphic/src/net/refractions/udig/mapgraphic/internal/messages.properties
+++ b/plugins/net.refractions.udig.mapgraphic/src/net/refractions/udig/mapgraphic/internal/messages.properties
@@ -35,6 +35,9 @@ GridStyleConfigurator_LineWidth=Line Width
 BarStyleConfigurator_barstylelabel=Style:
 BarStyleConfigurator_divisionslabel=Divisions:
 BarStyleConfigurator_colorlable=Color:
+BarStyleConfigurator_ImperialUnits=Imperial
+BarStyleConfigurator_MetricUnits=Metric
+BarStyleConfigurator_UnitsLabel=Units
 UnitListener_MixedUnits=Both units must be in pixel space or in world space, not a mix.  The other unit chooser has been updated.
 Font_ExampleText=Select...
 BarStyle_LabelSimple=Option 1
