Adding the name of the geometry column to the table selection table in the PostGIS import wizard.  Resolves UDIG-1488.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31172 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.ui/src/net/refractions/udig/catalog/service/database/messages.properties
+++ b/plugins/net.refractions.udig.catalog.ui/src/net/refractions/udig/catalog/service/database/messages.properties
@@ -5,7 +5,8 @@ DatabaseWizardLocalization_database=Database
 DatabaseWizardLocalization_databaseConnectionInterrupted=Database connection process interrupted
 DatabaseWizardLocalization_databasePermissionProblemMessage=You do not have permissions to access the list of all databases, Please enter the database to connect to
 DatabaseWizardLocalization_filter=Filter
-DatabaseWizardLocalization_geometry=Geometry
+DatabaseWizardLocalization_geometryType=Geometry Type
+DatabaseWizardLocalization_geometryName=Geometry Name
 DatabaseWizardLocalization_host=Host
 DatabaseWizardLocalization_incorrectConfiguration=Incorrectly configured
 DatabaseWizardLocalization_list=List
