http://jira.codehaus.org/browse/UDIG-661; added a generic metric/imperial choice to udig ui preference page and updated the distance tool & scalebar mapgraphic to use this
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31173 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -256,6 +256,9 @@ UiPreferences_advancedGraphics_label = Advanced Graphics (disable if no map is d
 UiPreferences_charset = Default Character Set
 
 UiPreferences_description = Preferences that control aspects of the UI
+UiPreferences_ImperialUnits=Imperial
+UiPreferences_MetricUnits=Metric
+UiPreferences_UnitsLabel=Default Units:
 
 cancel_image = stop_co.gif
 
