added support for automatic metric/imperial determination from CRS for distancetool and scalebar
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31181 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.mapgraphic/src/net/refractions/udig/mapgraphic/internal/messages.properties
+++ b/plugins/net.refractions.udig.mapgraphic/src/net/refractions/udig/mapgraphic/internal/messages.properties
@@ -37,6 +37,7 @@ BarStyleConfigurator_divisionslabel=Divisions:
 BarStyleConfigurator_colorlable=Color:
 BarStyleConfigurator_ImperialUnits=Imperial
 BarStyleConfigurator_MetricUnits=Metric
+BarStyleConfigurator_AutoUnits=Auto
 BarStyleConfigurator_UnitsLabel=Units
 UnitListener_MixedUnits=Both units must be in pixel space or in world space, not a mix.  The other unit chooser has been updated.
 Font_ExampleText=Select...
