--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -258,6 +258,7 @@ UiPreferences_charset = Default Character Set
 UiPreferences_description = Preferences that control aspects of the UI
 UiPreferences_ImperialUnits=Imperial
 UiPreferences_MetricUnits=Metric
+UiPreferences_AutoUnits=Auto
 UiPreferences_UnitsLabel=Default Units:
 
 cancel_image = stop_co.gif
