fix for http://jira.codehaus.org/browse/UDIG-1101 + now a preferences page is available to chose the language of the gui and the memory to use.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31182 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/plugin_it.properties
+++ b/plugins/net.refractions.udig.ui/plugin_it.properties
@@ -59,6 +59,8 @@ projection.tip.tip  = La proiezione standard per le nuove mappe pu\u00F2 essere 
 
 repositoryPerspective = Prospettiva del repositorio
 
+runntimePreferences = Opzioni di runtime
+
 showall.tip.name = Mostra tutto con la tastiera
 showall.tip.tip  = \u00C8 possibile ingrandire finch\u00E9 la mappa \u00E8 completamente visualizzata usando il Control-Backspace.
 
