--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -163,6 +163,20 @@ PlatformGIS_background = Run In Background
 
 RunOperationDialog_run_operation = Run Operation
 
+RunntimeFieldEditor_error = Error
+
+RunntimeFieldEditor_locale = Locale for user interface
+
+RunntimeFieldEditor_maxheap = Maximum heap memory in megabytes
+
+RunntimeFieldEditor_memory_positive = The memory value has to be a positive number bigger than 64.
+
+RunntimeFieldEditor_path_not_existing = The path to the workspace has to be an existing folder.
+
+RunntimeFieldEditor_restart = Restart with the above settings.
+
+RunntimeFieldEditor_workspace_path = Workspace path
+
 SendLogDialog_contact = Contact:
 
 SendLogDialog_contact_message = Please provide your contact information.
@@ -251,15 +265,16 @@ UDIGWorkbenchWindowAdvisor_classNotFound = Unable to load class {0} for use as {
 
 UDIGWorkbenchWindowAdvisor_specifiedButNotFound = {1} "{0}" specified but no valid extension found.\nPlease check that the extension exists and that it is valid.
 
+UiPreferences_ImperialUnits=Imperial
+UiPreferences_MetricUnits=Metric
+UiPreferences_AutoUnits=Auto
+UiPreferences_UnitsLabel=Default Units:
+
 UiPreferences_advancedGraphics_label = Advanced Graphics (disable if no map is displayed)
 
 UiPreferences_charset = Default Character Set
 
 UiPreferences_description = Preferences that control aspects of the UI
-UiPreferences_ImperialUnits=Imperial
-UiPreferences_MetricUnits=Metric
-UiPreferences_AutoUnits=Auto
-UiPreferences_UnitsLabel=Default Units:
 
 cancel_image = stop_co.gif
 
