--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
@@ -154,6 +154,20 @@ PlatformGIS_background = Esegui in secondo piano
 
 RunOperationDialog_run_operation = Esegui operazione
 
+RunntimeFieldEditor_error = Errore
+
+RunntimeFieldEditor_locale = Lingua per l'interfaccia grafica
+
+RunntimeFieldEditor_maxheap = Massima memoria a disposizione in megabyte
+
+RunntimeFieldEditor_memory_positive = Il valure della memoria deve essere un valore intero maggiore di 64.
+
+RunntimeFieldEditor_path_not_existing = Il percorso al workspace deve essere una cartella esistente.
+
+RunntimeFieldEditor_restart = Rilanciare l'applicazione con i nuovi settaggi.
+
+RunntimeFieldEditor_workspace_path = Percorso al workspace
+
 SendLogDialog_contact = Contatto:
 
 SendLogDialog_contact_message = Inserire le informazioni relative al proprio contatto.
