--- a/plugins/net.refractions.udig.catalog/src/net/refractions/udig/catalog/internal/messages.properties
+++ b/plugins/net.refractions.udig.catalog/src/net/refractions/udig/catalog/internal/messages.properties
@@ -4,6 +4,8 @@ CatalogImpl_finding=Finding services
 CatalogImpl_resolving=Resolving 
 CatalogImpl_monitorTask=Find service
 CatalogImpl_monitorTask2=Get geo resource by id
+CatalogPlugin__ErrorLoadingMessage=An error occurred while loading the local catalog. The application should still work when maps are opened but data in the local catalog will not be available. \n\n A backup of the corrupted catalog has been made.  Do you wish to overwrite the old catalog on shutdown?
+CatalogPlugin_ErrorLoading=Error loading Local Catalog
 CatalogPlugin_SavingCatalog=Saving Local Catalog...
 catalog_memory_service_title            = Scratch
 ICatalog_dispose=Disposing Catalog
