updated the simple style configurator so that the widgets stay in vertical alignment regardless of the size of the dialog box & internationalized some of labels  See http://jira.codehaus.org/browse/UDIG-1493
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31217 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.style.sld/src/net/refractions/udig/style/sld/internal/messages.properties
+++ b/plugins/net.refractions.udig.style.sld/src/net/refractions/udig/style/sld/internal/messages.properties
@@ -113,6 +113,7 @@ ScaleViewer_maxscaleden_tooltip = Maximum scale denominator
 ScaleViewer_minscaleden_tooltip = Minimum scale denominator
 
 SimpleStyleConfigurator_fill_label = Fill:
+SimpleStyleConfigurator_GeometryLabel=Geometry: 
 
 SimpleStyleConfigurator_label_label = Label:
 
@@ -120,20 +121,24 @@ SimpleStyleConfigurator_label_label = Label:
 # Simple
 #
 SimpleStyleConfigurator_line_label = Line:
+SimpleStyleConfigurator_LineMode=Line
 
 SimpleStyleConfigurator_maxscaleden_label = Max scale:
 
 SimpleStyleConfigurator_minscaleden_label = Min scale:
+SimpleStyleConfigurator_ModeLabel=Mode:
 SimpleRasterConfigurator_RedChannelLabel=Red
 SimpleRasterConfigurator_GreenChannelLabel=Green
 SimpleRasterConfigurator_BlueChannelLabel=Blue
 
 SimpleStyleConfigurator_point_label = Marker:
+SimpleStyleConfigurator_PointMode=Point
+SimpleStyleConfigurator_PolygonMode=Polygon
 SimpleRasterConfigurator_ScaleGroup=Scale
 
 SimpleStyleConfigurator_raster_label = Opacity:
 SimpleRasterConfigurator_BandDelimiter=\ : 
-SimpleStyleConfigurator_replaceButton=Replace Styles
+SimpleStyleConfigurator_replaceButton=Replace Styles:
 
 StrokeViewer_percent_tooltip = Line Opacity
 
