Starting to fill out the new point editor page.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31316 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.style.sld/src/net/refractions/udig/style/sld/internal/messages.properties
+++ b/plugins/net.refractions.udig.style.sld/src/net/refractions/udig/style/sld/internal/messages.properties
@@ -281,3 +281,17 @@ ChannelViewer_HistogramLabel=Histogram
 ChannelViewer_BandLabel=Band: 
 ChannelViewer_GammaLabel=Gamma: 
 RGBChannelViewer_RBGChannelSelectionLabel=RGB Channel Selection
+
+# Default Point Editor
+PointEditorPage_fancyCombo_default=<Default>
+PointEditorPage_fancyCombo_unselected=<Select value>
+StylingConstants_label_opacity=Opacity
+StylingConstants_tooltip_opacity=Opacity
+StylingConstants_label_size=Size
+StylingConstants_tooltip_size=Size
+StylingConstants_label_rotation=Rotation
+StylingConstants_tooltip_rotation=Rotation
+StylingConstants_label_anchor=Anchor
+StylingConstants_tooltip_anchor=Anchor point within graphic
+StylingConstants_label_displacement=Displacement
+StylingConstants_tooltip_displacement=Displacement of graphic relative to the geometry
