added message when creating a layer with a duplicate type name
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31318 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
@@ -221,6 +221,7 @@ StartupOpenMaps_processingTask=Processing:
 StylePreferencePage_perpendicularOffset=Default perpendicular offset:
 NewProjectWizardPage_default_name=New project
 NewLayerAction_duplicate_type_name=Duplicate type name
+NewLayerAction_duplicateName=An error occurred while attempting to create layer.\nUsually this is because a temporary layer with the same name already exists.
 NewProjectWizardPage_label_projectName=Project Name
 NewProjectWizardPage_err_project_exists=Project already exists at the specified path
 NewProjectWizardPage_label_projectDir=Project Directory
