now deleting multiple maps only asks 1 confirmation and delete
fixed problem where projects were always deleted

git-svn-id: http://svn.refractions.net/udig/udig/trunk@31321 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
@@ -190,9 +190,12 @@ IssuesView_dialogMessage=Are you sure you want to delete all related issues?
 IssuesView_DeleteIssueAction=Delete
 IssuesView_DeleteIssueTooltip=Delete Issue
 IssuesView_showGroups=Show Groups
+Delete_deleteElement=Delete "{0}" Element'?
 Delete_delete=Delete
+Delete_deleteMultipleElements=Delete {0} Elements?
 Delete_deleteProject=Delete Project
 Delete_filesystem=Delete from file system
+Delete_deleteMultipleProjects=Delete {0} Projects?
 
 StopAnimationCommand_name=Stop Animations
 StartAnimationCommand_name=Start Animations
