checks for out of memory errors
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31331 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.worldimage/src/net/refractions/udig/catalog/worldimage/internal/messages.properties
+++ b/plugins/net.refractions.udig.catalog.worldimage/src/net/refractions/udig/catalog/worldimage/internal/messages.properties
@@ -1,3 +1,7 @@
+InMemoryCoverageLoader_close_button=Close
+InMemoryCoverageLoader_message=The Raster {0} was just opened but it is larger than currently permitted by uDig.\n\n Press Restart to increase the maximum memory and restart uDig.  Or cancel if you don't want to load the raster
+InMemoryCoverageLoader_msgTitle=Maximum Permitted Memory Exceeded
+InMemoryCoverageLoader_restart_button=Restart
 WorldImageGeoResourceImpl_PrjUnavailable=.prj file could not be found for world image file.
 
 WorldImageServiceExtension_noID=No ID provided
