started enhancing the printing system. Added box zorder changing.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31333 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin_de.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_de.properties
@@ -10,30 +10,29 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
+bringbackwardAction.label = Nach hinten
+
+bringforwardAction.label = Nach vorne
+
+bringtobackAction.label = An letzter Stelle
+
+bringtofrontAction.label = An erste Stelle
+
 editMap = Karte bearbeiten
 
 label.box.name = Bezeichnung
 
 mapArea.box.name = Kartenauschnitt
 
-printing.ui.action.printFromMap.label = Drucken...
-
-printing.ui.action.printFromMap.tooltip = Erzeugt eine Druckseite
-
-printing.ui.action.printFromPage.label = Drucken...
-
+printing.ui.action.printFromMap.label    = Drucken...
+printing.ui.action.printFromMap.tooltip  = Erzeugt eine Druckseite
+printing.ui.action.printFromPage.label   = Drucken...
 printing.ui.action.printFromPage.tooltip = Diese Seite drucken
-
-printing.ui.boxFactories.name = Box-Drucker
-
-printing.ui.pageEditor.name = Seiteneditor
-
-printing.ui.perspective.name = Druckperspektive
-
-printing.ui.plugin.name = Druck-Plugin
-
-printing.ui.preferences.name = Druckeinstellungen
-
-printing.ui.templateFactories.name = Vorlagen-Erzeuger
+printing.ui.boxFactories.name            = Box-Drucker
+printing.ui.pageEditor.name              = Seiteneditor
+printing.ui.perspective.name             = Druckperspektive
+printing.ui.plugin.name                  = Druck-Plugin
+printing.ui.preferences.name             = Druckeinstellungen
+printing.ui.templateFactories.name       = Vorlagen-Erzeuger
 
 rename = Umbenennen
