--- a/plugins/net.refractions.udig.tool.edit/src/net/refractions/udig/tool/edit/internal/messages.properties
+++ b/plugins/net.refractions.udig.tool.edit/src/net/refractions/udig/tool/edit/internal/messages.properties
@@ -249,3 +249,5 @@ differenceOp_inputError2 = is not a vector layer
 
 differenceOp_multiGeoms = \ contains MultiGeometries
 ClearEditBlackboardCommand_name=Clear EditBlackboard
+GeometryCreationUtil_errorMsg=The geometry resulting from the edit is invalid.\nIn order to preserve data integrity the last edit sequence has been discarded.\nPlease try again.
+GeometryCreationUtil_errorTitle=Invalid Geometry
