Fixes for opening project.  Correctly recognizes if the project folder contains the required files
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31348 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
@@ -63,7 +63,7 @@ MapSummary_mapBounds=Map Bounds
 MapImport_addingLayersTask=Adding layers to map
 LayersView_down_tooltip=Moves the selected layer down
 LayersView_up_tooltip=Moves the selected layer up
-OpenProject_ErrorMessage=This directory is not a project folder.  Project folders must contain the '{0}' file
+OpenProject_ErrorMessage=This directory is not a project folder.  Project folders must contain the "{0}" file
 OpenProject_ErrorTitle=Not a Project
 OpenProject_newProject_filename=NewProject.udig
 OpenProject_openProject_title=Open Project
